objects/QwikScore_Question_Answer__c.object
<CustomObject>
    <description>Answers to questions in a survey.</description>
    <fields>
        <fullName>Answer_Text__c</fullName>
        <description>What is the text value of the answer given to this question.</description>
        <inlineHelpText>What is the text value of the answer given to this question.</inlineHelpText>
        <label>Answer Text</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_Unique_Id__c</fullName>
        <description>A unique identifier to make sure the same question is not answered more than once for a single scorecard.</description>
        <inlineHelpText>A unique identifier to make sure the same question is not answered more than once for a single scorecard.</inlineHelpText>
        <label>Answer Unique Id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Answer_Value__c</fullName>
        <description>Numeric value derived from question text. Used for calculating score.</description>
        <formula>IF(ISNUMBER( Answer_Text__c) , VALUE( Answer_Text__c ), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Numeric value derived from question text. Used for calculating score.</inlineHelpText>
        <label>Answer Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsAnswered__c</fullName>
        <description>Displays 0 if the question has not been answered. Displays 1 if it has been.</description>
        <formula>IF(ISNULL( Answer_Text__c ), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays 0 if the question has not been answered. Displays 1 if it has been.</inlineHelpText>
        <label>IsAnswered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QuestionGroupId__c</fullName>
        <formula>Question__r.QwikScore_Question_Group__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QuestionGroupId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Which question is this an answer for?</description>
        <inlineHelpText>Which question is this an answer for?</inlineHelpText>
        <label>Question</label>
        <referenceTo>QwikScore_Question__c</referenceTo>
        <relationshipLabel>Question Answers</relationshipLabel>
        <relationshipName>QwikScore_Question_Answers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QwikScore_Scorecard__c</fullName>
        <description>Which scorecard does this question answer belong to?</description>
        <inlineHelpText>Which scorecard does this question answer belong to?</inlineHelpText>
        <label>Scorecard</label>
        <referenceTo>QwikScore_Scorecard__c</referenceTo>
        <relationshipLabel>Question Answers</relationshipLabel>
        <relationshipName>QwikScore_Question_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Weighted_Score__c</fullName>
        <description>The weighted score of this answer</description>
        <formula>Answer_Value__c *  Question__r.Question_Weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The weighted score of this answer</inlineHelpText>
        <label>Weighted Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Question Answer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Question__c</columns>
        <columns>Answer_Text__c</columns>
        <columns>Answer_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QQA-{000000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>